Wealth OS deep audit: financial correctness, Gmail sync, documentation
Full-session hardening pass covering research, architecture, implementation,
and a printable backend manual. 474 backend tests passing (up from 178),
zero deprecation warnings, zero DDL failures, frontend type-check clean.

## Fixed bugs

- ArithmeticException on MF import when NAV is 0.00 in a malformed statement
  (aborted the whole email instead of skipping one transaction)
- Fabricated MF units/cost: a missing amount/NAV fell back to "1 unit @
  whole amount", corrupting the ledger's weighted-average cost
- NullPointerException on a null trade quantity/type during import
- Holding created under the literal symbol "null.NS" when a parsed symbol
  was null
- StackOverflowError in Holding/Portfolio equals()/hashCode()/toString()
  from Lombok @Data recursing through a bidirectional JPA relation;
  fixed across 18 entities with @EqualsAndHashCode(onlyExplicitlyIncluded)
- /actuator/health returned 500: SecurityConfig allowlisted it but
  spring-boot-starter-actuator was never a dependency
- 404s and validation errors surfaced as 500 "unexpected error" app-wide
  (NoResourceFoundException / IllegalArgumentException fell through the
  catch-all exception handler)
- FD/RD created with a maturity date already in the past stayed ACTIVE for
  up to 24h (only the daily sweep flipped status, and it may have already run)
- Sender-spoofing gap: parser selection matched on the raw From header
  (display name included), so "Zerodha Alerts" <attacker@evil.example>
  could be routed to ZerodhaParser
- importParsedEmail was not @Transactional: a fingerprint-write failure
  after a successful booking could double-import on the next sync
- Manual PDF-unlock passwords were saved unconditionally, without the
  consent prompt the spec requires
- ReferenceHarvester.strongest() re-ran all six regex passes twice per call
- Recommendation engine weights (30/20/20/30) had no sum-to-100 validation;
  a misconfigured value